Homework 2 attempts to fix alignment on ul li

--- a/GA-FEWD_HOMEWORK2/css/style.css
+++ b/GA-FEWD_HOMEWORK2/css/style.css
@@ -7,7 +7,7 @@ body {
   font-size: 36px;
   font-family: helvetica;
   color: white;
-  margin-left: 200px;
+  margin-right: 900px;
   
 
 
@@ -55,10 +55,11 @@ h3 {
   font-size: 40px;
   font-weight: 600;
   margin-bottom: 40px;
+  margin-right: 900px;
   text-align: center;
 }
-#benefits ul { 
-  display: inline-block;
+#benefits { 
+ 
 } 
   
 .testimonial {
